# mlops-cdr-demo

./: .gitignore  Readme.md  azure.yaml  mlflow.db  pyproject.toml  readme.txt
data/: baseline_test.parquet  baseline_train.parquet  drifted_inference.parquet  drifted_labels.parquet  drifted_train.parquet
infra/: main.bicep  main.parameters.json
infra/envs/: hdbscan_env.yml  simple_env.yml  train-env.yml
infra/modules/: compute-cluster.bicep  compute-instance.bicep  environment.bicep  registry.bicep  workspace.bicep
mlruns/0/e1141fc48979480884dfa88b0c024a36/artifacts/: classification_report.txt  feature_importance.json  feature_importance_weight.json
outputs/credit_risk_model/: MLmodel  conda.yaml  eval_metrics.json  input_example.json  model.ubj  python_env.yaml  requirements.txt  serving_input_example.json
src/: auth.py
src/data/: generate_data.py  register_data.py
src/drift/: detect_drift.py  retrain_on_drift.yml
src/inference/: deploy_model.py  inference_client.py
src/train/: submit_train_job.py  train.py
