[project]
name = "mlops-cdr-demo"
version = "0.1.0"
description = "CDR MLOps demo"
requires-python = "==3.10.*"

dependencies = [
    "azure-ai-ml>=1.16.0",
    "raiwidgets==0.36.0",
    "responsibleai==0.36.0",
    "pandas<2.0.0",
    "numpy<=1.26.2",
    "scikit-learn<=1.2.2",
    "matplotlib<4.0.0",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
]

[tool.uv]
# Ensures uv installs the correct Python version automatically
python-preference = "only-managed"
